fix button on mobile

--- a/public/css/clean-blog.css
+++ b/public/css/clean-blog.css
@@ -106,7 +106,7 @@ img::-moz-selection {
 
 #mainNav .navbar-brand {
   font-weight: 800;
-  color: #81A1C1;
+  color: #BF616A;
 }
 
 #mainNav .navbar-toggler {
@@ -114,7 +114,7 @@ img::-moz-selection {
   font-weight: 800;
   padding: 13px;
   text-transform: uppercase;
-  color: #0F111A;
+  color: #81A1C1;
 }
 
 #mainNav .navbar-nav > li.nav-item > a {
@@ -122,7 +122,7 @@ img::-moz-selection {
   font-weight: 800;
   letter-spacing: 1px;
   text-transform: uppercase;
-  color: #0F111A;
+  color: #E5E9F0;
 }
 
 @media only screen and (min-width: 992px) {
@@ -411,9 +411,9 @@ footer .copyright {
 }
 
 .btn {
-  font-size: 14px;
-  font-weight: 800;
-  padding: 15px 25px;
+  font-size: 10px;
+  font-weight: 785;
+  padding: 11px 21px;
   letter-spacing: 1px;
   text-transform: uppercase;
   border-radius: 0;
@@ -437,4 +437,16 @@ footer .copyright {
 .btn-lg {
   font-size: 16px;
   padding: 25px 35px;
+}
+
+@media only screen and (min-width: 992px) {
+  .btn {
+    font-size: 14px;
+    font-weight: 800;
+    padding: 15px 25px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    border-radius: 0;
+    font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  }
 }
